--- a/mystyle.css
+++ b/mystyle.css
@@ -53,7 +53,7 @@ html, body {
 
 .middle{
 	width: 100%;
-	height: 76%;
+	height: 70%;
 	background-image: url("BG_pic.jpg");
 }
 
@@ -68,13 +68,22 @@ html, body {
 	color: white;
 }
 
+.join{
+	width: 45%;
+	height: 50%;
+	padding-top: 10%;
+	
+}
 .about_info{
-	padding-top: 5%;
+	padding-top: 0%;
 	width: 45%;
 	height:	60%;
 	float: left;
 }
-
+.about_middle{
+	height: 76%;
+	width: 100%;
+}
 .about_info h1{
 	color: white;
 }
@@ -85,7 +94,7 @@ html, body {
 
 .about_photo {
 
-	padding-top: 5%;
+	padding-top: 0%;
 	width: 45%;
 	height:	76%;
 	float: right;
@@ -94,7 +103,7 @@ html, body {
 .about_photo img{
 	float: right;
 	padding-right: 5%;
-	height: 90%;
+	height: 60%;
 	width: 90%;
 }
 
@@ -112,6 +121,15 @@ html, body {
 	color: white;
 }
 .members li{
+	color: white;
+	
+}
+.footer{
+	height: 20%;
+	width: 100%;
+}
+.footer p{
+
 	color: white;
 	
 }
